syntax = "proto3";

option csharp_namespace = "Web.InternalApi";

import "google/protobuf/timestamp.proto";

package supporter;

service SupporterLinkService {
  rpc GetCheckoutLink (CreateLinkOptions) returns (CreateLinkReply);

  rpc AddStripeSupporter (AddStripeSupporterRequest) returns (AddStripeSupporterReply);
}


message CreateLinkOptions {
  int64 discordUserId = 1;
}

message CreateLinkReply {
  string checkoutLink = 1;
}

message AddStripeSupporterRequest {
  int64 discordUserId = 1;
  string stripeCustomerId = 2;
  string stripeSubscriptionId = 3;
  google.protobuf.Timestamp endsAt = 4;
}

message AddStripeSupporterReply {
  bool success = 1;
}
